# riski

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .trivyignore  EXTRACTION_PLAN.md  LICENSE  README.md  app.py  compose.headless.yaml  compose.yaml  logconf.yaml  package-lock.json  pyproject.toml  renovate.json  renovate.json5  requirements.txt  ruff.toml  tag-version.ps1
riski-backend/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Readme.md  local.config.yaml  logconf.yaml  main.py  pyproject.toml
riski-backend/app/: backend.py
riski-backend/app/agent/: README.md  __init__.py  builder.py  riski_agent.py  state.py  tools.py  types.py
riski-backend/app/api/: dependencies.py
riski-backend/app/api/oparl/: __init__.py  errors.py  filters.py  pagination.py  serializers.py
riski-backend/app/api/routers/: __init__.py  ag_ui.py  oparl.py  system.py
riski-backend/app/core/: observer.py  settings.py
riski-backend/app/models/: config_response.py  health_check_response.py
riski-backend/app/models/oparl/: __init__.py  responses.py
riski-backend/app/utils/: logging.py
riski-backend/test/: conftest.py
riski-backend/test/integration/: test_healthz.py  test_oparl_db_contract.py  test_oparl_phase1.py  test_riski_agent.py
riski-backend/test/unit/: test_backend_settings.py  test_check_document.py  test_checkpointer_settings.py  test_guard_proposals.py  test_logging.py
riski-core/: pyproject.toml
riski-core/src/core/db/: db.py  db_access.py  file_id_collector.py  ris_queries.py
riski-core/src/core/genai/: __init__.py  helper.py
riski-core/src/core/kafka/: security.py
riski-core/src/core/lm/: helper.py
riski-core/src/core/model/: data_models.py
riski-core/src/core/settings/: base.py  db.py  (+5 more)
riski-db-keep-alive-workaround/: Dockerfile  README.md  app.py  logconf.yaml  pyproject.toml
riski-db-keep-alive-workaround/config/: config.py
riski-db-keep-alive-workaround/src/: logtools.py
riski-document-pipeline/: .gitignore  Dockerfile  README.md  logconf.yaml  main.py  pyproject.toml
riski-document-pipeline/settings/: settings.py
riski-document-pipeline/src/: logtools.py
riski-document-pipeline/src/embed/: embed_store.py
riski-document-pipeline/src/parse/: parse.py
riski-extractor/: .dockerignore  .gitignore  Dockerfile  README.md  _dry_run.py  _e2e.py  _import_check.py  app.py  debug_meeting_html.py  debug_tagesordnung_structure.py  logconf.yaml  meeting_detail_9141571.html  pyproject.toml  recon.py  recon_detail.py  recon_links.py  tagesordnung_9015032.html  test_agenda_extractor.py  test_consultation.py  test_create_agenda_items.py  test_direct_tagesordnung.py  test_location_db.py  test_meeting_html.py  test_meeting_parser.py  test_meeting_parser_unit.py  test_new_agenda_db_methods.py  test_new_agenda_methods_simple.py  test_new_parser.py  test_tagesordnung_extractor.py  test_url_structure.py
riski-extractor/config/: config.py  test.py
riski-extractor/notebooks/: demo.ipynb  docling.ipynb  faststream_kafka_test.py  generate_er_diagramm.ipynb  kafka.ipynb  pgvector.ipynb
riski-extractor/notebooks/test_files/: file.sql
riski-extractor/src/: data_models.py  db_access.py  envtools.py  extract.py  logtools.py  version.py
riski-extractor/src/db/: db.py  db_access.py  db_access_person.py
riski-extractor/src/docling/: Dockerfile  eval_docling.py  file_info.csv  send_single_request.py
riski-extractor/src/extractor/: ba_member_extractor.py  base_extractor.py  bezirksausschuss_paper_extractor.py  city_council_faction_extractor.py  city_council_meeting_extractor.py  city_council_meeting_template_extractor.py  city_council_member_extractor.py  city_council_motion_extractor.py  gremium_hierarchy_extractor.py  gremium_membership_extractor.py  gremium_organization_extractor.py  head_of_department_extractor.py  location_extractor.py  meeting_agenda_item_extractor.py  meeting_tagesordnung_extractor.py  meeting_template_agenda_extractor.py  referenten_extractor.py  stadtratssitzungen_extractor.py
riski-extractor/src/filehandler/: confidential_file_deleter.py  file_id_collector.py  filehandler.py
riski-extractor/src/kafka/: broker.py  message.py  security.py
riski-extractor/src/parser/: __init__.py  base_parser.py  bezirksausschuss_paper_parser.py  city_council_faction_parser.py  city_council_meeting_parser.py  city_council_meeting_template_parser.py  city_council_member_parser.py  city_council_motion_parser.py  gremium_organization_parser.py  head_of_department_parser.py  meeting_tagesordnung_parser.py  person_base_parser.py  person_parser.py  stadtratssitzungen_parser.py  str_parser.py
riski-extractor/test/: conftest.py  test_confidential_file_deleter.py  test_council_meeting_template_extractor.py  test_council_meeting_template_extractor_html.html  test_council_meeting_template_extractor_html_2.html  test_data_model.py  test_db_access.py  test_file_id_collector.py  test_filehandler.py  test_gremium_organization_parser.py  test_person_parser.py  test_person_template.html
riski-mcp/: .env.example  .gitignore  Readme.md  app.py  pyproject.toml  requirements.txt
riski-mcp/docs/: openapi.json
riski-mcp/docs/issues/: 00-epic-overview.md  01-project-scaffold.md  02-openapi-models-client.md  03-ag-ui-stream-client.md  04-mcp-tools-definition.md  05-configuration-secrets.md  06-gradio-app-mcp-server.md  07-error-handling-voice-ux.md  08-hf-space-deployment.md  09-reachy-mini-integration.md  10-testing.md  11-ci-observability.md  README.md
riski-mcp/src/riski_mcp/: __init__.py  agui_client.py  client.py  config.py  formatting.py  models.py  tools.py
riski-mcp/test/: test_agui_client.py  test_app.py  test_client.py  test_formatting.py  test_models.py  test_scaffold.py  test_tools.py
riski-oparl/: Dockerfile  README.md  main.py  openapi.json  pyproject.toml
riski-oparl/app/: backend.py  db.py  seed.py  settings.py
riski-oparl/app/oparl/: examples.py  mappings.py  pagination.py  repository.py  serializers.py  urls.py
riski-oparl/app/routers/: oparl.py
riski-oparl/test/: test_oparl.py
(+622 files in other folders)
