[project]
name = "riski-extraktor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.38.0",
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "langchain-docling>=1.0.0",
    "pymupdf>=1.26.3",
    "pre-commit>=4.2.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]
