[project]
name = "riski-backend"
license = "MIT"
version = "0.5.5"
description = "Python backend for finding information in munich's political information system RIS"
readme = "README.md"
requires-python = "==3.13.9"
authors = [
    { name = "Fabian Reinold", email = "fabian.reinold@muenchen.de" },
    { name = "Stefan Hentschel", email = "stefan.hentschel@muenchen.de" },
    { name = "Annalena Wittmann", email = "annalena.wittmann@muenchen.de" },
    { name = "Tim-Luca Pfeifer", email = "tim-luca.pfeifer@muenchen.de" },
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
]
maintainers = [
    { name = "Stefan Hentschel", email = "stefan.hentschel@muenchen.de" },
]

dependencies = [
    "fastapi==0.137.1",
    "uvicorn==0.40.0",
    "httpx==0.28.1",
    "cryptography== 49.0.0 ",
    "pydantic-settings==2.14.2",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "truststore==0.10.4",
    "ag-ui-langgraph==0.0.41",
    "pyyaml==6.0.3",
    "langfuse==3.12.1",
    "core",
    "langchain-postgres==0.0.16",
    "langchain-openai==1.1.14",
    "langchain-core==1.4.7",
    "langchain==1.3.9",
    "langgraph==1.2.5",
    "langgraph-prebuilt==1.1.0",
    "langgraph-checkpoint==4.1.1",
    "langgraph-checkpoint-redis==0.4.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest-asyncio==1.3.0",
    "pytest==9.0.3",
    "pytest-cov==7.0.0",
    "pytest-env==1.2.0",
    "ruff==0.14.14",
    "ty==0.0.14",
]

[tool.uv.sources]
core = { path = "../riski-core" }

[tool.uv]
add-bounds = "exact"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
asyncio_mode = "auto"
addopts = ["--cov=app", "--cov-report=term-missing"]

[tool.pytest_env]
RISKI_ENABLE_DOCS = "false"
OPENAI_API_KEY = "test-key"
RISKI__DB__PASSWORD = "pw"
SSL_CERT_FILE = ""
REQUESTS_CA_BUNDLE = ""
RISKI__CONFIG = ""
