[project]
name = "core"
version = "0.1.4"
description = "Riski core for shared functionality like data model, db access, etc."
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "sqlalchemy==2.0.46",
    "sqlmodel==0.0.32",
    "psycopg[binary,pool]==3.3.2",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",
    "pgvector==0.3.6",
    "langchain-openai==1.1.7",
    "truststore==0.10.4",
]

[build-system]
requires = ["uv_build==0.9.30"]
build-backend = "uv_build"
