[project]
name = "core"
version = "0.1.5"
description = "Riski core for shared functionality like data model, db access, etc."
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "sqlalchemy==2.0.49",
    "sqlmodel==0.0.38",
    "psycopg[binary,pool]==3.3.3",
    "pydantic[email]==2.13.3",
    "pydantic-settings==2.14.2",
    "pgvector==0.3.6",
    "langchain-openai==1.1.14",
    "truststore==0.10.4",
    "langchain-core==1.4.7",
    "langsmith==0.8.18",
]

[build-system]
requires = ["uv_build==0.9.30"]
build-backend = "uv_build"
