[project]
name = "document_pipeline"
version = "0.1.11"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.14"
dependencies = [
    "mistralai>=1.9.11",
    "truststore>=0.10.4",
    "core",
    "pypdf>=6.12.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "cryptography>= 48.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pypdf>=6.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.uv.sources]
core = { path = "../riski-core" }
