[project]
name = "extractor"
version = "0.0.1a1"
description = "Python application for extracting information from munich's political information system RIS"
readme = "README.md"
requires-python = "==3.13.9"
license = { file = "LICENSE" }
authors = [
    { name = "Fabian Reinold", email = "fabian.reinold@muenchen.de" },
    { name = "Stefan Hentschel", email = "stefan.hentschel@muenchen.de" },
    { name = "Annalena Wittmann", email = "annalena.wittmann@muenchen.de" },
    { name = "Tim-Luca Pfeifer", email = "tim-luca.pfeifer@muenchen.de" },
]
dependencies = [
    "tokenizers==0.21.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "cryptography>=46.0.3",
    "faststream[kafka]>=0.6.5",
    "pytest-asyncio>=1.3.0",
    "truststore>=0.10.4",
    "gitpython>=3.1.45",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.32",
    "pyyaml>=6.0.2",
    "stamina>=25.1.0",
    "core",
    "legacy-cgi>=2.6.4",
]

[project.optional-dependencies]
pgvector = [
    "asyncpg==0.30.0",
    "langchain-postgres==0.0.15",
]

[dependency-groups]
dev = [
    "ipykernel==7.0.1",
    "pre-commit==4.3.0",
    "ruff==0.14.1",
    "ty==0.0.1a23",
    "pytest==8.4.2",
    "faststream[kafka]==0.6.5",
    "langchain-docling>=1.1.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
core = { path = "../riski-core" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"


[tool.uv]
exclude-dependencies = ["tree-sitter-java-orchard"]
