[project]
name = "extractor"
version = "0.0.10"
description = "Python application for extracting information from munich's political information system RIS"
readme = "README.md"
requires-python = "==3.13.9"
license = { file = "LICENSE" }
authors = [
    { name = "Fabian Reinold", email = "fabian.reinold@muenchen.de" },
    { name = "Stefan Hentschel", email = "stefan.hentschel@muenchen.de" },
    { name = "Annalena Wittmann", email = "annalena.wittmann@muenchen.de" },
    { name = "Tim-Luca Pfeifer", email = "tim-luca.pfeifer@muenchen.de" },
]
dependencies = [
    "tokenizers==0.21.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "pytest-asyncio==1.3.0",
    "truststore==0.10.4",
    "gitpython==3.1.46",
    "pyyaml==6.0.3",
    "stamina==25.2.0",
    "httpx==0.28.1",
    "core",
    "legacy-cgi==2.6.4",
    "bs4==0.0.2",
]

[project.optional-dependencies]
pgvector = [
    "asyncpg==0.30.0",
    "langchain-postgres==0.0.16",
]

[dependency-groups]
dev = [
    "ipykernel==7.0.1",
    "pre-commit==4.3.0",
    "ty==0.0.1a23",
    "langchain==1.2.7",
    "langchain-community==0.4.1",
    "langchain-docling==2.0.0",
    "langchain-openai==1.1.7",
    "pytest==8.4.2",
    "faststream[kafka]==0.6.1",
    "ruff==0.14.14",
    "python-dotenv==1.2.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
core = { path = "../riski-core" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build==0.9.30"]
build-backend = "uv_build"


[tool.uv]
exclude-dependencies = ["tree-sitter-java-orchard"]