[project]
name = "extractor"
version = "0.0.10"
description = "Python application for extracting information from munich's political information system RIS"
readme = "README.md"
requires-python = "==3.13.9"
license = { file = "LICENSE" }
authors = [
    { name = "Fabian Reinold", email = "fabian.reinold@muenchen.de" },
    { name = "Stefan Hentschel", email = "stefan.hentschel@muenchen.de" },
    { name = "Annalena Wittmann", email = "annalena.wittmann@muenchen.de" },
    { name = "Tim-Luca Pfeifer", email = "tim-luca.pfeifer@muenchen.de" },
]
dependencies = [
    "tokenizers==0.21.2",
    "pytest-asyncio>=1.3.0",
    "truststore>=0.10.4",
    "gitpython>=3.1.50",
    "pyyaml>=6.0.2",
    "stamina>=25.1.0",
    "httpx>=0.28.1",
    "core",
    "bs4>=0.0.2",
]

[project.optional-dependencies]
pgvector = [
    "asyncpg==0.30.0",
    "langchain-postgres>=0.0.15",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "ty==0.0.1a23",
    "pytest==9.0.3",
    "faststream[kafka]==0.6.1",
    "ruff>=0.14.11",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
core = { path = "../riski-core" }

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"


[tool.uv]
exclude-dependencies = ["tree-sitter-java-orchard"]