[project]
name = "riski-mcp"
license = "MIT"
version = "0.0.1"
description = "MCP server exposing the RISKI RIS-search agent as a tool, deployable as a Hugging Face Gradio Space for Reachy Mini"
readme = "Readme.md"
requires-python = "==3.13.9"
authors = [
    { name = "Stefan Hentschel", email = "stefan.hentschel@muenchen.de" },
]
maintainers = [
    { name = "Stefan Hentschel", email = "stefan.hentschel@muenchen.de" },
]

dependencies = [
    "gradio[mcp]>=5.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.2",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.11",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
add-bounds = "exact"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
asyncio_mode = "auto"
addopts = ["--cov=riski_mcp", "--cov-report=term-missing"]
